--- a/config.h.in
+++ b/config.h.in
@@ -1,81 +1,112 @@
-/* config.h.in.  Generated automatically from configure.in by autoheader.  */
+/* config.h.in.  Generated from configure.in by autoheader.  */
 
-/* Define if the ALSA output driver is used */
-#undef HAVE_ESD
-#undef HAVE_COMEDI
+/* Build with ALSA input */
+#undef HAVE_ALSA
 
-/* Define if you have the <asm/errno.h> header file.  */
+/* Define to 1 if you have the <asm/errno.h> header file. */
 #undef HAVE_ASM_ERRNO_H
 
-/* Define if you have the <comedilib.h> header file.  */
-#undef HAVE_COMEDILIB_H
+/* Build with COMEDI input */
+#undef HAVE_COMEDI
 
-/* Define if you have the <dlfcn.h> header file.  */
+/* Define to 1 if you have the <dlfcn.h> header file. */
 #undef HAVE_DLFCN_H
 
-/* Define if you have the <drfftw.h> header file.  */
+/* Define to 1 if you have the <drfftw.h> header file. */
 #undef HAVE_DRFFTW_H
 
-/* Define if you have the <esd.h> header file.  */
+/* Build with Esound input */
+#undef HAVE_ESD
+
+/* Define to 1 if you have the <esd.h> header file. */
 #undef HAVE_ESD_H
 
-/* Define if you have the <fcntl.h> header file.  */
+/* Define to 1 if you have the <fcntl.h> header file. */
 #undef HAVE_FCNTL_H
 
-/* Define if you have the <math.h> header file.  */
-#undef HAVE_MATH_H
+/* Define to 1 if you have the <inttypes.h> header file. */
+#undef HAVE_INTTYPES_H
 
-/* Define if you have the <pthread.h> header file.  */
-#undef HAVE_PTHREAD_H
-
-/* Define if you have the <rfftw.h> header file.  */
-#undef HAVE_RFFTW_H
-
-/* Define if you have the <stdio.h> header file.  */
-#undef HAVE_STDIO_H
-
-/* Define if you have the <stdlib.h> header file.  */
-#undef HAVE_STDLIB_H
-
-/* Define if you have the <string.h> header file.  */
-#undef HAVE_STRING_H
-
-/* Define if you have the <sys/ioctl.h> header file.  */
-#undef HAVE_SYS_IOCTL_H
-
-/* Define if you have the <sys/poll.h> header file.  */
-#undef HAVE_SYS_POLL_H
-
-/* Define if you have the <sys/stat.h> header file.  */
-#undef HAVE_SYS_STAT_H
-
-/* Define if you have the <sys/time.h> header file.  */
-#undef HAVE_SYS_TIME_H
-
-/* Define if you have the <sys/types.h> header file.  */
-#undef HAVE_SYS_TYPES_H
-
-/* Define if you have the <unistd.h> header file.  */
-#undef HAVE_UNISTD_H
-
-/* Define if you have the drfftw library (-ldrfftw).  */
+/* Define to 1 if you have the `drfftw' library (-ldrfftw). */
 #undef HAVE_LIBDRFFTW
 
-/* Define if you have the efence library (-lefence).  */
+/* Define to 1 if you have the `efence' library (-lefence). */
 #undef HAVE_LIBEFENCE
 
-/* Define if you have the gdk_imlib library (-lgdk_imlib).  */
-#undef HAVE_LIBGDK_IMLIB
-
-/* Define if you have the pthread library (-lpthread).  */
+/* Define to 1 if you have the `pthread' library (-lpthread). */
 #undef HAVE_LIBPTHREAD
 
-/* Define if you have the rfftw library (-lrfftw).  */
+/* Define to 1 if you have the `rfftw' library (-lrfftw). */
 #undef HAVE_LIBRFFTW
+
+/* Define to 1 if you have the <math.h> header file. */
+#undef HAVE_MATH_H
+
+/* Define to 1 if you have the <memory.h> header file. */
+#undef HAVE_MEMORY_H
+
+/* Build with OSS input */
+#undef HAVE_OSS
+
+/* Define to 1 if you have the <pthread.h> header file. */
+#undef HAVE_PTHREAD_H
+
+/* Define to 1 if you have the <rfftw.h> header file. */
+#undef HAVE_RFFTW_H
+
+/* Define to 1 if you have the <stdint.h> header file. */
+#undef HAVE_STDINT_H
+
+/* Define to 1 if you have the <stdio.h> header file. */
+#undef HAVE_STDIO_H
+
+/* Define to 1 if you have the <stdlib.h> header file. */
+#undef HAVE_STDLIB_H
+
+/* Define to 1 if you have the <strings.h> header file. */
+#undef HAVE_STRINGS_H
+
+/* Define to 1 if you have the <string.h> header file. */
+#undef HAVE_STRING_H
+
+/* Define to 1 if you have the <sys/ioctl.h> header file. */
+#undef HAVE_SYS_IOCTL_H
+
+/* Define to 1 if you have the <sys/poll.h> header file. */
+#undef HAVE_SYS_POLL_H
+
+/* Define to 1 if you have the <sys/stat.h> header file. */
+#undef HAVE_SYS_STAT_H
+
+/* Define to 1 if you have the <sys/time.h> header file. */
+#undef HAVE_SYS_TIME_H
+
+/* Define to 1 if you have the <sys/types.h> header file. */
+#undef HAVE_SYS_TYPES_H
+
+/* Define to 1 if you have the <unistd.h> header file. */
+#undef HAVE_UNISTD_H
 
 /* Name of package */
 #undef PACKAGE
 
+/* Define to the address where bug reports for this package should be sent. */
+#undef PACKAGE_BUGREPORT
+
+/* Define to the full name of this package. */
+#undef PACKAGE_NAME
+
+/* Define to the full name and version of this package. */
+#undef PACKAGE_STRING
+
+/* Define to the one symbol short name of this package. */
+#undef PACKAGE_TARNAME
+
+/* Define to the version of this package. */
+#undef PACKAGE_VERSION
+
+/* Define to 1 if you have the ANSI C header files. */
+#undef STDC_HEADERS
+
 /* Version number of package */
 #undef VERSION
-
