--- a/Makefile.in
+++ b/Makefile.in
@@ -124,10 +124,10 @@ RECURSIVE_TARGETS = info-recursive dvi-recursive install-info-recursive \
 	install-exec-recursive installdirs-recursive install-recursive \
 	uninstall-recursive check-recursive installcheck-recursive
 DIST_COMMON = README AUTHORS COPYING ChangeLog INSTALL Makefile.am \
-	Makefile.in NEWS TODO VERSION.in acinclude.m4 aclocal.m4 \
-	config.guess config.h.in config.sub configure configure.in \
-	depcomp extace.spec.in install-sh ltmain.sh missing \
-	mkinstalldirs
+	Makefile.in NEWS TODO VERSION.in acconfig.h acinclude.m4 \
+	aclocal.m4 config.guess config.h.in config.sub configure \
+	configure.in depcomp extace.spec.in install-sh ltmain.sh \
+	missing mkinstalldirs
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
@@ -159,7 +159,7 @@ stamp-h1: $(srcdir)/config.h.in $(top_builddir)/config.status
 	@rm -f stamp-h1
 	cd $(top_builddir) && $(SHELL) ./config.status config.h
 
-$(srcdir)/config.h.in: @MAINTAINER_MODE_TRUE@ $(top_srcdir)/configure.in $(ACLOCAL_M4) 
+$(srcdir)/config.h.in: @MAINTAINER_MODE_TRUE@ $(top_srcdir)/configure.in $(ACLOCAL_M4) $(top_srcdir)/acconfig.h
 	cd $(top_srcdir) && $(AUTOHEADER)
 	touch $(srcdir)/config.h.in
 
