--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
+
 AC_INIT(src/main.c)
+AC_PREREQ(2.54)
 
 EXTACE_MAJOR_VERSION=1
 EXTACE_MINOR_VERSION=9
@@ -9,8 +11,8 @@ EXTACE_VERSION=$EXTACE_MAJOR_VERSION.$EXTACE_MINOR_VERSION.${EXTACE_MICRO_VERSIO
 
 AM_INIT_AUTOMAKE(extace, ${EXTACE_VERSION})
 AM_CONFIG_HEADER(config.h)
-AM_MAINTAINER_MODE
 
+AM_MAINTAINER_MODE
 
 dnl =========================================================================
 dnl control variables
