--- a/config.h.in
+++ b/config.h.in
@@ -27,11 +27,11 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
-/* Define to 1 if you have the `drfftw' library (-ldrfftw). */
-#undef HAVE_LIBDRFFTW
-
 /* Define to 1 if you have the `efence' library (-lefence). */
 #undef HAVE_LIBEFENCE
+
+/* Define to 1 if you have the `fftw3' library (-lfftw3). */
+#undef HAVE_LIBFFTW3
 
 /* Define to 1 if you have the `pthread' library (-lpthread). */
 #undef HAVE_LIBPTHREAD
@@ -107,6 +107,12 @@
 
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
+
+/* Build with FFTW 2.x input */
+#undef USING_FFTW2
+
+/* Build with FFTW 3.x input */
+#undef USING_FFTW3
 
 /* Version number of package */
 #undef VERSION
