Fixed AXIS markers showing WAY off frequencies when using decimation. for both the 2D EQ (bug only was evident in linear scale) and in the high res modes. (all modes were affected and now work as they should)

--- a/configure.ac
+++ b/configure.ac
@@ -5,11 +5,11 @@ dnl AC_PREREQ(2.54)
 
 EXTACE_MAJOR_VERSION=1
 EXTACE_MINOR_VERSION=9
-EXTACE_MICRO_VERSION=4
+EXTACE_MICRO_VERSION=5
 
 EXTACE_VERSION=$EXTACE_MAJOR_VERSION.$EXTACE_MINOR_VERSION.${EXTACE_MICRO_VERSION}
 
-AM_INIT_AUTOMAKE(extace, 1.9.4)
+AM_INIT_AUTOMAKE(extace, 1.9.5)
 AM_CONFIG_HEADER(config.h)
 
 dnl AM_MAINTAINER_MODE
@@ -23,6 +23,7 @@ have_fftw2=no
 have_alsa=no
 have_oss=no
 have_esd=no
+have_comedi=no
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -72,31 +73,31 @@ fi
 dnl
 dnl Check for ALSA library (can also do OSS under emulation)
 dnl
-AC_CHECK_LIB(asound, snd_pcm_open, have_alsa=yes, have_alsa=no) 
-if test "$have_alsa" = "yes"
-then
-   AC_DEFINE(HAVE_ALSA,1,[Build with ALSA input]) 
-   EXTRA_LIBS="-lasound $EXTRA_LIBS "
-fi
+dnl AC_CHECK_LIB(asound, snd_pcm_open, have_alsa=yes, have_alsa=no) 
+dnl if test "$have_alsa" = "yes"
+dnl then
+dnl    AC_DEFINE(HAVE_ALSA,1,[Build with ALSA input]) 
+dnl    EXTRA_LIBS="-lasound $EXTRA_LIBS "
+dnl fi
 
 dnl
 dnl Check for OSS library
 dnl
-AC_CHECK_HEADER(sys/soundcard.h, have_oss=yes, have_oss=no)
-if test "$have_oss" = "yes"
-then
-	AC_DEFINE(HAVE_OSS,1,[Build with OSS input])
-fi
+dnl AC_CHECK_HEADER(sys/soundcard.h, have_oss=yes, have_oss=no)
+dnl if test "$have_oss" = "yes"
+dnl then
+dnl 	AC_DEFINE(HAVE_OSS,1,[Build with OSS input])
+dnl fi
 
 dnl
 dnl Check for COMEDI library
 dnl
-AC_CHECK_LIB(comedi, comedi_open, have_comedi=yes, have_comedi=no,[ -lm])
-if test "$have_comedi" = "yes"
-then
-	AC_DEFINE(HAVE_COMEDI,1,[Build with COMEDI input]) 
-	EXTRA_LIBS="-lcomedi $EXTRA_LIBS "
-fi
+dnl AC_CHECK_LIB(comedi, comedi_open, have_comedi=yes, have_comedi=no,[ -lm])
+dnl if test "$have_comedi" = "yes"
+dnl then
+dnl 	AC_DEFINE(HAVE_COMEDI,1,[Build with COMEDI input]) 
+dnl 	EXTRA_LIBS="-lcomedi $EXTRA_LIBS "
+dnl fi
 
 
 dnl fftw3
