--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -50,7 +50,7 @@ LIBS= -lpthread
 
 COMMON_FLAGS = @PFLAGS@ @DFLAGS@ 
 
-CFLAGS += $(COMMON_FLAGS) -Wall 
+AM_CFLAGS = $(COMMON_FLAGS) -Wall 
 
 CLEANFILES = *~ core* gmon.out nohup.out 
 
