Added pulseaudio support.  Currently VERY simple, and leaks memory on close becasue for some reason "pa_simple_free" just hangs the app, and doesn't do what is expected. Might be a bug in pulseaudio 0.9.6.

--- a/config.h.in
+++ b/config.h.in
@@ -42,6 +42,9 @@
 /* Define to 1 if you have the <pthread.h> header file. */
 #undef HAVE_PTHREAD_H
 
+/* Build with PulseAudio input */
+#undef HAVE_PULSEAUDIO
+
 /* Define to 1 if you have the <rfftw.h> header file. */
 #undef HAVE_RFFTW_H
 
