--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,9 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(src/main.c)
+AC_INIT([eXtace],[1.9.10])
+AM_INIT_AUTOMAKE
+
+AM_CONFIG_HEADER(config.h)
 
 EXTACE_MAJOR_VERSION=1
 EXTACE_MINOR_VERSION=9
@@ -8,8 +11,6 @@ EXTACE_MICRO_VERSION=10
 
 EXTACE_VERSION=$EXTACE_MAJOR_VERSION.$EXTACE_MINOR_VERSION.${EXTACE_MICRO_VERSION}
 
-AM_INIT_AUTOMAKE(extace, 1.9.10)
-AM_CONFIG_HEADER(config.h)
 
 dnl AM_MAINTAINER_MODE
 
