Fix compilation on newer systems

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,7 +6,8 @@ AM_CPPFLAGS = \
 	-DGTK_DISABLE_COMPAT_H \
 	-D_MAJOR_=@EXTACE_MAJOR_VERSION@ \
 	-D_MINOR_=@EXTACE_MINOR_VERSION@ \
-	-D_MICRO_=@EXTACE_MICRO_VERSION@
+	-D_MICRO_=@EXTACE_MICRO_VERSION@ \
+  -fcommon
 
 
 noinst_PROGRAMS = sweep
